--- a/package.json
+++ b/package.json
@@ -18,10 +18,16 @@
     "@typescript-eslint/eslint-plugin": "^4.25.0",
     "@typescript-eslint/parser": "^4.25.0",
     "autoprefixer": "^10.2.6",
+    "cz-conventional-changelog": "3.3.0",
     "eslint": "^7.27.0",
     "eslint-plugin-prettier": "^3.4.0",
     "postcss": "^8.3.0",
     "tailwindcss": "^2.1.2",
     "typescript": "4.3.2"
+  },
+  "config": {
+    "commitizen": {
+      "path": "./node_modules/cz-conventional-changelog"
+    }
   }
 }
