--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "cz-conventional-changelog": "3.3.0",
     "eslint": "^7.27.0",
     "eslint-plugin-prettier": "^3.4.0",
+    "js-base64": "^3.6.1",
+    "nanoid": "^3.1.23",
     "postcss": "^8.3.0",
     "tailwindcss": "^2.1.2",
     "typescript": "4.3.2"
