feat(v1): implemented form sections, inputs, radios, selection, and react-hook-form
Ensured fault-tolerant form with react-hook-form. Hooked up API to form, designed email template and
sending emails.

--- a/package.json
+++ b/package.json
@@ -9,12 +9,22 @@
   },
   "dependencies": {
     "@tailwindcss/forms": "^0.3.2",
+    "email-templates": "^8.0.7",
     "next": "10.2.3",
+    "next-csrf": "^0.1.1",
+    "nodemailer": "^6.6.1",
+    "nodemailer-sendgrid-transport": "^0.2.0",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-feather": "^2.0.9",
+    "react-hook-form": "^7.7.1",
+    "react-spring": "^9.2.1"
   },
   "devDependencies": {
+    "@types/email-templates": "^8.0.3",
+    "@types/lodash": "^4.14.170",
     "@types/react": "17.0.8",
+    "@types/react-dom": "^17.0.5",
     "@typescript-eslint/eslint-plugin": "^4.25.0",
     "@typescript-eslint/parser": "^4.25.0",
     "autoprefixer": "^10.2.6",
@@ -22,6 +32,8 @@
     "eslint": "^7.27.0",
     "eslint-plugin-prettier": "^3.4.0",
     "js-base64": "^3.6.1",
+    "libphonenumber-js": "^1.9.19",
+    "lodash": "^4.17.21",
     "nanoid": "^3.1.23",
     "postcss": "^8.3.0",
     "tailwindcss": "^2.1.2",
